# LumiMIDI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  rebuild.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AudioEngine.cpp  AudioEngine.h  BaseProgram.cpp  BaseProgram.h
Source/DSP/Programs/: RandomSparkle.cpp  SimpleStroboscope.cpp  SimpleStroboscope.h  SimpleWave.cpp
Source/Parameters/: ParameterIDs.h  ParameterManager.cpp  ParameterManager.h
Source/UI/Components/: CcSender.cpp  CcSender.h  FilterSection.cpp  FilterSection.h  KnobComponent.cpp  KnobComponent.h  WorldView.cpp  WorldView.h
Source/UI/LookAndFeel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h
Source/UI/Resources/: ColourPalette.cpp  ColourPalette.h
